EventDispatcher shouldn't always cancel on a hierarchy change

Currently when a window is moved to a different parent we cancel
events. This is problematic for window dragging as we want to reparent
the window to ensure it's stacked on top of other windows.

The fix here isn't ideal, but I'm going to address the bigger issue as
part of 613646.

BUG=613646
TEST=covered by test
R=jonross@chromium.org

Review-Url: https://codereview.chromium.org/1998323002
Cr-Commit-Position: refs/heads/master@{#395145}

Former-commit-id: b863e7efb7ffcb6be025385c11d61b4b70b9ceee